test/should-fail/检查类型-4.j
native bad takes undef u1 returns nothing
